Fix static code issues